// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AccountsCard /> > it renders an AccountsCard component with title as expected 1`] = `
<body>
  <div>
    <div
      class="pos_relative trs_all_0.3s_ease-in-out bd_1px_solid bd-c_border bdr_lg bg-c_card c_card.foreground p_5 d_flex flex-d_column [&:hover]:bx-sh_0_10px_20px_rgba(0,_0,_0,_0.15)! [&:hover]:trf_translate3d(-2px,_-4px,_0) h_280px d_flex flex-d_column jc_space-between p_20px pos_relative ov_hidden trs_transform_0.2s_ease,_box-shadow_0.2s_ease,_border-color_0.2s_ease [&:hover]:trf_translateY(-4px) [&:hover]:bx-sh_md [&:hover]:bd-c_primary"
      id="123456"
    >
      <div
        class="d_flex jc_space-between ai_flex-start mb_12px"
      >
        <div
          class="d_flex flex-d_column gap_2px cursor_pointer flex_1"
          role="button"
          tabindex="0"
        >
          <h5
            class="c_text.muted fs_0.75rem fw_bold lh_tight m_0 "
          >
            Current account
          </h5>
          <h4
            class="c_primary fs_1rem fw_bold lh_tight m_0 "
          >
            My curent account
          </h4>
        </div>
        <button
          aria-expanded="false"
          aria-haspopup="dialog"
          class="d_inline-flex ai_center jc_center bdr_full fw_medium trs_all_0.2s cursor_pointer px_0 py_3 fs_sm lh_1 disabled:op_0.5 disabled:cursor_not-allowed focusVisible:ring_2px_solid focusVisible:ring-c_primary focusVisible:ring-o_2px bg_transparent c_text.primary hover:bg_accent hover:c_accent.foreground h_10 w_10"
          data-state="closed"
          style="border-radius: 50%; width: 32px; height: 32px; padding: 0px;"
          type="button"
        >
          <svg
            fill="currentColor"
            height="12"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
            />
          </svg>
        </button>
      </div>
      <div
        class="flex_1 d_flex flex-d_column jc_space-between cursor_pointer mt_8px"
        role="button"
        tabindex="0"
      >
        <div
          class="d_flex ai_baseline gap_8px mb_16px"
        >
          <span
            class="fs_22px fw_bold c_text.primary"
          >
            £12,000
          </span>
          <span
            class="fs_11px fw_bold p_2px_8px bdr_full bg-c_rgba(16,_185,_129,_0.1) c_success.500 d_inline-flex ai_center gap_2px"
          >
            ↑
             
            +9%
          </span>
        </div>
        <div
          class="flex_1 h_100% min-h_100px mt_auto ml_-20px mr_-20px mb_-20px ov_hidden bdr-bl_lg bdr-br_lg"
        >
          <div
            class="recharts-responsive-container"
            style="width: 100%; height: 100%; min-width: 0;"
          >
            <div
              style="width: 0px; height: 0px; overflow: visible;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<AccountsCard with increasing values > should match snapshot for account with increasing values 1`] = `
<body>
  <div>
    <div
      class="pos_relative trs_all_0.3s_ease-in-out bd_1px_solid bd-c_border bdr_lg bg-c_card c_card.foreground p_5 d_flex flex-d_column [&:hover]:bx-sh_0_10px_20px_rgba(0,_0,_0,_0.15)! [&:hover]:trf_translate3d(-2px,_-4px,_0) h_280px d_flex flex-d_column jc_space-between p_20px pos_relative ov_hidden trs_transform_0.2s_ease,_box-shadow_0.2s_ease,_border-color_0.2s_ease [&:hover]:trf_translateY(-4px) [&:hover]:bx-sh_md [&:hover]:bd-c_primary"
      id="123456"
    >
      <div
        class="d_flex jc_space-between ai_flex-start mb_12px"
      >
        <div
          class="d_flex flex-d_column gap_2px cursor_pointer flex_1"
          role="button"
          tabindex="0"
        >
          <h5
            class="c_text.muted fs_0.75rem fw_bold lh_tight m_0 "
          >
            Current account
          </h5>
          <h4
            class="c_primary fs_1rem fw_bold lh_tight m_0 "
          >
            My curent account
          </h4>
        </div>
        <button
          aria-expanded="false"
          aria-haspopup="dialog"
          class="d_inline-flex ai_center jc_center bdr_full fw_medium trs_all_0.2s cursor_pointer px_0 py_3 fs_sm lh_1 disabled:op_0.5 disabled:cursor_not-allowed focusVisible:ring_2px_solid focusVisible:ring-c_primary focusVisible:ring-o_2px bg_transparent c_text.primary hover:bg_accent hover:c_accent.foreground h_10 w_10"
          data-state="closed"
          style="border-radius: 50%; width: 32px; height: 32px; padding: 0px;"
          type="button"
        >
          <svg
            fill="currentColor"
            height="12"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
            />
          </svg>
        </button>
      </div>
      <div
        class="flex_1 d_flex flex-d_column jc_space-between cursor_pointer mt_8px"
        role="button"
        tabindex="0"
      >
        <div
          class="d_flex ai_baseline gap_8px mb_16px"
        >
          <span
            class="fs_22px fw_bold c_text.primary"
          >
            £9,000
          </span>
          <span
            class="fs_11px fw_bold p_2px_8px bdr_full bg-c_rgba(239,_68,_68,_0.1) c_destructive d_inline-flex ai_center gap_2px"
          >
            ↓
             
            -10%
          </span>
        </div>
        <div
          class="flex_1 h_100% min-h_100px mt_auto ml_-20px mr_-20px mb_-20px ov_hidden bdr-bl_lg bdr-br_lg"
        >
          <div
            class="recharts-responsive-container"
            style="width: 100%; height: 100%; min-width: 0;"
          >
            <div
              style="width: 0px; height: 0px; overflow: visible;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
